--- a/14-panel/tsconfig.json
+++ b/14-panel/tsconfig.json
@@ -4,7 +4,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "@/shared/*": ["./src/app/shared/*"]
+      "@shared/*": ["./src/app/shared/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
